--- a/css/main.css
+++ b/css/main.css
@@ -64,14 +64,17 @@ footer {
   }
 
   #column-1 {
+    width: 50%;
     background-color: #00ff00;
   }
 
   #column-2 {
+    width: 50%;
     background-color: #00ffff;
   }
 
   #column-3 {
+    width: 100%;
     background-color: #003399;
   }
 
@@ -89,14 +92,17 @@ footer {
   }
 
   #column-1 {
+    width: 33.3%;
     background-color: #ffff66;
   }
 
   #column-2 {
+    width: 33.3%;
     background-color: #ff6600;
   }
 
   #column-3 {
+    width: 33.3%;
     background-color: #800000;
   }
 
